--- a/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper.vcxproj
+++ b/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Keep talking and nobody explodes helper.cpp" />
+    <ClCompile Include="Memory.cpp" />
     <ClCompile Include="Password.cpp" />
     <ClCompile Include="Simple wires.cpp" />
     <ClCompile Include="SimonSays.cpp" />
