--- a/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper.vcxproj.filters
+++ b/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper/Keep talking and nobody explodes helper.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="Memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Complex wires.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Morse code.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Modules.h">
